# rules_go_windows_bug

./: BUILD.bazel  deps.bzl  go.mod  main.go
.github/workflows/: build.yml
